test/Errors/type_expected.elab
Axiom bad_type : fun x : Prop => x